Fix chat (#1047)
* handle chat error

* update scrollbar style

* darkmode for scrollbar

* use azure if the stt engine not found

--- a/enjoy/src/index.css
+++ b/enjoy/src/index.css
@@ -102,3 +102,32 @@ body {
     outline: none;
   }
 }
+
+/* make scrollbar beautiful */
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f8f8f8;
+}
+::-webkit-scrollbar-thumb {
+  background: #e0e0e0;
+  border-radius: 10px;
+}
+
+/* Dark mode styles for scrollbar */
+html.dark {
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #1a1a1a;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #444;
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+}
